<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CalculoIUCActivity">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="369dp"
        android:layout_height="256dp"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <RadioGroup
                android:id="@+id/radioGroupCilindrada"
                android:layout_width="194dp"
                android:layout_height="match_parent"
                android:checkedButton="@+id/radioButton1">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Cilindrada (cm3)" />

                <RadioButton
                    android:id="@+id/radioButton1"
                    android:layout_width="154dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/radioButton1_value" />

                <RadioButton
                    android:id="@+id/radioButton2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/radioButton2_value" />

                <RadioButton
                    android:id="@+id/radioButton3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/radioButton3_value" />

                <RadioButton
                    android:id="@+id/radioButton4"
                    android:layout_width="154dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/radioButton4_value" />
            </RadioGroup>

            <RadioGroup
                android:id="@+id/radioGroupEmissoes"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:checkedButton="@+id/radioButton5">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Emissões (CO2 g/kg)" />

                <RadioButton
                    android:id="@+id/radioButton5"
                    android:layout_width="131dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/radioButton5_value" />

                <RadioButton
                    android:id="@+id/radioButton6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/radioButton6_value" />

                <RadioButton
                    android:id="@+id/radioButton7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/radioButton7_value" />

                <RadioButton
                    android:id="@+id/radioButton8"
                    android:layout_width="131dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/radioButton8_value" />
            </RadioGroup>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="373dp"
        android:layout_height="68dp"
        android:orientation="horizontal"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="279dp">

        <Button
            android:id="@+id/button"
            android:layout_width="7dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/calcular_value" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="33dp"
            android:layout_weight="1"
            android:text="@string/textViewResultado_value" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>